force-app/main/default/objects/OCE__CallDiscussion__c/fields/Scientific_Objective__c.field-meta.xml
<CustomField>
    <fullName>Scientific_Objective__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Scientific Objective</label>
    <referenceTo>OCE__BusinessTactic__c</referenceTo>
    <relationshipLabel>Call Discussions</relationshipLabel>
    <relationshipName>Call_Discussions</relationshipName>
    <type>Lookup</type>
</CustomField>