force-app/main/default/objects/OCE__CallDiscussion__c/fields/Short_Note__c.field-meta.xml
<CustomField>
    <fullName>Short_Note__c</fullName>
    <label>Short Note</label>
    <length>140</length>
    <type>Text</type>
</CustomField>