force-app/main/default/objects/OCE__CallDiscussion__c/fields/Supporting_Medical_Letters_Docs__c.field-meta.xml
<CustomField>
    <fullName>Supporting_Medical_Letters_Docs__c</fullName>
    <label>Supporting Medical Letters/Docs</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ML - IQVAMAB 001</fullName>
            </value>
            <value>
                <fullName>ML - IQVAMAB 002</fullName>
            </value>
            <value>
                <fullName>ML - IQVAMAB 003</fullName>
            </value>
            <value>
                <fullName>ML - IQVAMAB 004</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>