force-app/main/default/objects/OCE__CallDiscussion__c/recordTypes/Interactions.recordType-meta.xml
<RecordType>
    <fullName>Interactions</fullName>
    <active>true</active>
    <label>Interactions</label>
</RecordType>